<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tvColor"
        android:layout_alignBottom="@+id/spSize"
        android:text="@string/setting_size_label" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvSize"
        android:entries="@array/imgSize_array"
        android:prompt="@string/setting_size_hint" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/spColor"
        android:layout_below="@+id/tvSize"
        android:text="@string/setting_color_label" />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spSize"
        android:layout_toRightOf="@+id/tvColor"
        android:entries="@array/imgColor_array"
        android:prompt="@string/setting_color_hint" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvColor"
        android:layout_alignBottom="@+id/spType"
        android:layout_below="@+id/tvColor"
        android:text="@string/setting_type_label" />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spColor"
        android:layout_toRightOf="@+id/tvType"
        android:entries="@array/imgType_array"
        android:prompt="@string/setting_type_hint" />


    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvColor"
        android:layout_alignBottom="@+id/etSite"
        android:layout_below="@+id/tvType"
        android:text="@string/setting_site_label" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spType"
        android:layout_toRightOf="@+id/tvSite"
        android:ems="10"
        android:hint="@string/setting_site_hint" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etSite"
        android:text="@string/settings_save_btn_label" />

</RelativeLayout>